--- a/web/index.html
+++ b/web/index.html
@@ -46,6 +46,8 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 				top:20px;
 				right:20px;
 				z-index:1000;
+				height: 10px;
+				width: 10px;
 			}
 		</style>
 
