--- a/server/index.html
+++ b/server/index.html
@@ -54,6 +54,8 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 	<body height = 100% width = 100%>
 		<div id="buttonBox">
 			<input id="submitButton" type="button" value="Fly!" onclick="fly();" />
+			<input id="lineTask" type="button" value="Line task" onclick="setTask('line')">
+			<input id="polyTask" type="button" value="Poly task" onclick="setTask('poly')"">
 		</div>
 		<div id="mapid"></div>
 
@@ -62,6 +64,10 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 		</noscript>
 		<script>
 
+			//What task the user wants to create. Default is linetask
+			var lineTask = true
+			var polyTask = false
+
 			//60.396346, 5.321288 # Bergen
 			//37.619374, -122.376637 # San Francisco
 			var mymap = L.map('mapid').setView([37.619374, -122.376637], 17);
@@ -69,7 +75,7 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 			// this access token is the one used in the examples of the tutorial
 			// in theory one should get an own one, but it works for now and that's all I want for testing
 			L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-				maxZoom: 20,
+				maxZoom: 30,
 				attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
 					'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
 					'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
@@ -81,10 +87,10 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 			var lines = [];
 			var prevPos = null; 
 
-			function onMapClick(e) {
-				var newpos = e.latlng;
 
 
+			function doPolyTask(npos) {
+				var newpos = npos
 				//First time
 				if (startpos == null) {
 					startpos = newpos;
@@ -104,6 +110,35 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 					startposmarker.remove();
 					prevPos = newpos; 
 				}
+			}
+
+				function doLineTask(npos) {
+				var newpos = npos
+				if (startpos == null) {
+					startpos = newpos;
+					startposmarker.setLatLng(startpos);
+					startposmarker.addTo(mymap);
+				}
+				else {
+					var line = L.polyline([startpos, newpos]);
+					line.addTo(mymap);
+					lines.push(line);
+					startpos = null;
+					startposmarker.remove();
+				}
+			}
+
+			function onMapClick(e) {
+				var newpos = e.latlng;
+
+				if(polyTask) {
+					doPolyTask(newpos) 
+				}
+
+				else if(lineTask) {
+					doLineTask(newpos)
+				}
+				
 			}
 
 			mymap.on('click', onMapClick);
@@ -175,6 +210,20 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 				}
 				ws.send(JSON.stringify(positions));
 				console.log("Done");
+			}
+
+			function setTask(task) {
+				console.log("Setting task: " + task)
+				switch(task) {
+					case "line":
+						startpos = null
+						lineTask = true
+						polyTask = false
+						break
+					case "poly":
+						lineTask = false
+						polyTask=true
+				} 
 			}
 
 		</script>
